fixed align property bugs added message load project and created optimized ui of toast

--- a/anubias2/src/style.css
+++ b/anubias2/src/style.css
@@ -193,6 +193,10 @@ input{
 }
 
 /*fix components*/
+.Vue-Toastification__toast--warning div{
+    color: darkred;
+}
+
 .button.active {
     box-shadow: inset 0 0 0 40px var(--text-hilight);
     color: var(--darker-bg);
